Fix when all events are closed that the bottom event overflows

--- a/assets/less/hmcc.less
+++ b/assets/less/hmcc.less
@@ -50,6 +50,7 @@ label {
 		}
 
 	}
+	padding: 20px;
 
 }
 
